<resources>
    <string name="app_name">Discrete Maths Companion</string>

    //place-holder text
    <string name="divisors">Find all the divisors of a single number.</string>
    <string name="gcd">the gcd is: </string>
    <string name="lcm">the lcm is: </string>
    <string name="prime_factors">the prime factors are: </string>
    <string name="introduction"> Welcome to the Discrete Maths Companion App! \n Choose which calculation you would like to preform:\n find GCD, find LCM, find divisors, find prime factors: </string>

    //instructions text
    <string name="gcd_instructions">Find the Greatest Common Divisor (GCD) of 2 or more numbers.</string>
    <string name="placeholder_value">0</string>
    <string name="divisors_result">divisors are:\n</string>
    <string name="divisors_button">Find divisors</string>

    //menu item text
    <string name="menu_home">Home</string>
    <string name="menu_gcd">GCD</string>
    <string name="menu_lcm">LCM</string>
    <string name="menu_prime_factors">Prime factors</string>
    <string name="menu_divisors">Divisors</string>
    <string name="lcm_instruction">Find the Lowest Common Multiple (LCM) of 2 or more numbers.</string>

    //Button texts
    <string name="lcm_button">Calculate lcm</string>
    <string name="find_prime_factors">Prime Factors</string>
    <string name="prime_factors_instructions">Find the prime factors of a single number.</string>
    <string name="gcd_button">Calculate gcd</string>

    //location information
    <string name="size_width_inputField">"325dp"</string>
</resources>
