<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">


    <item
        android:id="@+id/home"
        android:title="@string/menu_home"
        android:icon="@drawable/home"
        />

    <item
        android:id="@+id/lcm"
        android:title="@string/menu_lcm"
        android:icon="@drawable/up_arrow"
        />

    <item
        android:id="@+id/gcd"
        android:title="@string/menu_gcd"
        android:icon="@drawable/left_arrow"
        />

    <item
        android:id="@+id/prime_factors"
        android:title="@string/menu_prime_factors"
        android:icon="@drawable/down_arrow"
    />

    <item
        android:id="@+id/divisors"
        android:title="@string/menu_divisors"
        android:icon="@drawable/right_arrow"
     />

</menu>